js 추가 자기소개

--- a/intro.css
+++ b/intro.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700,800&display=swap');
 
+
+
 *{
     font-family: 'Montserrat';
 }
@@ -79,4 +81,15 @@ section {
     font-weight: bolder;
     -webkit-text-stroke-width: 0.5px;
 	-webkit-text-stroke-color: black;
+}
+
+
+body.dark {
+  background-color: #111;
+  color: #eee;
+}
+
+body.light {
+  background-color: #eee;
+  color: #111;
 }
